# myfraction

./: CMakeLists.txt  ignore.gitignore  main.cpp
debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
debug/.cmake/api/v1/reply/: cache-v2-282193e1911742c2e351.json  cmakeFiles-v1-ec3490a4afc97348d1d3.json  codemodel-v2-b816e16e1b53afcfde98.json  directory-googletest.googletest.googlemock-Debug-221b6bc9fe02dd59623f.json  directory-googletest.googletest.googletest-Debug-d2160e7930011fed671a.json  index-2024-12-04T09-24-14-0681.json  target-fraction_test_run-Debug-a36df5a6e28bc9c125f5.json  target-gmock-Debug-821c8bfc441aabae6820.json  target-gmock_main-Debug-50f588f208c66bc39d76.json  target-gtest-Debug-9751c8487776032d8d9c.json  (+4 more)
debug/googletest/: cmake_install.cmake
debug/googletest/googletest/: CTestTestfile.cmake  cmake_install.cmake
debug/googletest/googletest/googlemock/: CTestTestfile.cmake  cmake_install.cmake
debug/googletest/googletest/googletest/: CTestTestfile.cmake  cmake_install.cmake
debug/src/: cmake_install.cmake
googletest/: CMakeLists.txt  tests.cpp
release/: CMakeCache.txt  build.ninja  cmake_install.cmake
release/googletest/: cmake_install.cmake
release/googletest/googletest/: CTestTestfile.cmake  cmake_install.cmake
release/googletest/googletest/googlemock/: CTestTestfile.cmake  cmake_install.cmake
release/googletest/googletest/googletest/: CTestTestfile.cmake  cmake_install.cmake
release/src/: cmake_install.cmake
src/: CMakeLists.txt  fraction.cpp  fraction.h  program.cpp  program.h
(+14 files in other folders)
